--- a/src/Components/SearchBar.css
+++ b/src/Components/SearchBar.css
@@ -1,21 +1,23 @@
 .main-container{
     width: 90vw;
-    
+    right: 250px;
     margin: auto;
     position: relative;
     top: 100px; bottom: 0; left: 0; right: 0;
+
 }
 
 
 .search-container {
     position: relative;
     margin: 20px auto;
-    width: 100%;
+    width: 50%;
     max-width: 500px;
     display: flex;
     align-items: center;
     gap: 15px;
 }
+
 
 .search-input {
     width: 100%;
